--- a/_posts/2021-12-25-post1.md
+++ b/_posts/2021-12-25-post1.md
@@ -1,12 +1,67 @@
 ---
-title: "post antiguo"
+title: "Las 5 mejores canciones de Lana Del Rey"
 layout: posts
-tags: prueba
+tags: Music
 categories: 
-    - prueba
-    - prueba2
+    - Music
+    - Artists
 ---
 
 
-# Post 1
-contenido
+# Las 5 mejores canciones de Lana Del Rey
+
+_Para hablar de la música alternativa y de cómo en los últimos años tomó mucha más fuerza para convertirse en una suerte de nicho para los artistas que responden a propuestas que quizás no encajan en el mainstream, es imperante y necesario tener presente a Lana Del Rey, para muchos la reina alternativa de la música en la actualidad. Resulta increíble la popularidad de la que goza esta intérprete a pesar de que no es precisamente la que lidera los charts a nivel mundial, o rompe récords de reproducciones con sus trabajos, pero sin lugar a duda es una artista que ha dejado su huella bien sea por su estética, por su estilo a la hora de cantar, por sus polémicas letras sumisas o por las controversias en las que se ha visto envuelta._
+
+
+
+## Young and Beautiful
+_Young and Beautiful_ fue escrita por Lana luego de que el director, co-guionista y co-productor de la película, Baz Luhrmann, la considerara para la banda sonora de The Great Gatsby. Del Rey escribió una versión anterior de la canción para su EP Paradise, pero la volvió a trabajar con Luhrmann después de que la escuchó y decidió que funcionaría muy bien con la película. En una entrevista Lana, comentó que le cantó la canción a Baz y que este le pidió que le escribiera un tema al personaje de Daisy, y que luego de ver la secuencia del jardín, la cantante ya había escrito la canción. Daisy es un personaje que representa todo el narcisismo en pleno, dado que la juventud y la belleza son sus motores de vida, pero eventualmente se cuestiona si habrá algún hombre que la quiera cuando ya no sea ni joven ni hermosa.
+
+_I’ve seen the world, lit it up as my stage now / Channeling angels in the new age now / Will you still love me when I’m no longer young and beautiful? / Will you still love me when I got nothing but my aching soul?_
+
+[Haz click aquí para escucharla](https://youtu.be/o_1aF54DO60)
+
+🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤
+
+## Born To Die
+
+Uno de los grandes éxitos de Del Rey es una suerte de reflexión sobre el amor, la vida y la muerte, cómo el amor nos puede hacer vivir al extremo pero a la vez también llevarnos a la muerte cuando no se ama a la persona correcta. Lana se refiere a la forma en que todo tiene una fecha de caducidad. Nada dura para siempre, y Lana se da cuenta de que no sólo terminará la relación, sino que también lo harán ellos físicamente, cuestionando el sentido de hacer algo si al final no importará. Para Lana la muerte es una amenaza latente y constante, algo que reconoce en esta ocasión pero no deja de mostrar miedo ante esta situación pese a que se muestre muy realista y terrenal.
+
+_Don’t make me sad, don’t make me cry / Sometimes love is not enough and the road gets tough / I don’t know why_
+
+[Haz click aquí para escucharla](https://youtu.be/Bag1gUxuU0g)
+
+🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤
+
+## Brooklyn Baby
+
+Este favorito de los fans de Ultraviolence es el mayor abrazo de Del Rey a la tranquilidad, pues en este track nos da un paisaje sonoro de ensueño salpicado de fragmentos cuerdas etéreas y una base de guitarras y percusión. En este imaginario zen, Del Rey encuentra el momento perfecto para hacer una sátira de una chica de Brooklyn dolorosamente inconsciente que encarna todos los estereotipos de los habitantes blancos molestos de ese barrio neoyorquino: novios músicos, una colección de discos raros de jazz y, por supuesto, marihuana hidropónica.
+
+_And my boyfriend’s in a band / He plays guitar while I sing Lou Reed / I’ve got feathers in my hair / I get high on hydroponic weed_
+
+[Haz click aquí para escucharla](https://youtu.be/T5xcnjAG8pE)
+
+🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤
+
+## Video Games
+
+La letra de esta canción es sobre dos relaciones rotas en el pasado del cantante. “El verso era sobre la forma en que las cosas eran con una persona, y el coro era la forma en que deseaba que las cosas hubieran sido realmente con otra persona, en la que pensé durante mucho tiempo”, comentó la intérprete en su momento. Esta pieza fue con la que Lana realmente comenzó dejar ir a sus ambiciones musicales y sencillamente disfrutar jugar videojuegos con su pareja, pero fue en realidad el tema que al catapultó por completo y que la estableció como una referente gracias a sus letras, su estética y su estilo de cantar. Un dato curioso es que el video de esta canción fue grabado por Lana y su hermana en su casa, con una vibra muy vintage y The Weeknd lo publicó en su cuenta en Tumblr por varios días.
+
+_I tell you all the time / Heaven is a place on Earth with you / Tell me all the things you wanna do / I heard that you like the bad girls / It’s better than I ever even knew / They say that the world was built for two / Only worth living if somebody is loving you_
+
+[Haz click aquí para escucharla](https://youtu.be/cE6wxDqdOV0)
+
+🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤  🖤
+
+## Norman Fucking Rockwell
+
+Así llegamos a la que es hasta ahora la mejor canción que Lana Del Rey ha publicado hasta la fecha en su carrera, tema que le da nombre también a uno de los mejores discos del año pasado y de la década. Líricamente, Norman Fucking Rockwell presenta a Del Rey cantando en el primer verso sobre una relación con un hombre inmaduro que no se responsabiliza de sus propios defectos, y luego admite durante el coro que la ha convencido para que se quede con él, aunque la entristece. Del Rey pasa por alto sus defectos obvios, cantando: “¿Por qué esperar lo mejor cuando podría tenerte a ti?”. El título de la canción es un homenaje irónico al pintor Norman Rockwell, que es una suerte de referencia que Lana utiliza para referirse a su pareja, uno que la pinta de azul, colores que están relacionado con la tristeza y la depresión. Este tema fue nominado en la más reciente edición de los Premios Grammy como Canción del Año, una nominación sorpresiva pero que fue celebrado no solo por los fanáticos de la cantante sino por la industria en general.
+
+_Goddamn, man-child / You fucked me so good that I almost said “I love you” / You’re fun and you’re wild / But you don’t know the half of the shit that you put me through_
+
+[Haz click aquí para escucharla](https://youtu.be/soRjcajliHE)
+
+
+---
+
+Gracias por leer💊. Fuente: [MOR.BO](https://ismorbo.com/las-8-mejores-canciones-de-lana-del-rey/)
