--- a/_posts/2021-12-25-post1.md
+++ b/_posts/2021-12-25-post1.md
@@ -1,8 +1,9 @@
 ---
-title: "Las 5 mejores canciones de Lana Del Rey"
+title: "Top 5: Lana del Rey"
 layout: posts
 tags: Music
 categories: 
+    - post
     - Music
     - Artists
 ---
