--- a/_posts/2022-10-10-post1.md
+++ b/_posts/2022-10-10-post1.md
@@ -1,8 +1,9 @@
 ---
-title: "Noticias Perú"
+title: "Noticia de la Semana"
 layout: posts
 tags: Noticias
 categories: 
+    - post
     - Noticias
     - News
 ---
