--- a/_posts/2023-01-01-todo.md
+++ b/_posts/2023-01-01-todo.md
@@ -3,10 +3,12 @@ title: "TODO"
 layout: posts
 tags: prueba
 categories: 
-    - prueba
-    - prueba2
+    - music
+    - news
+    - noticias
+    - post
 ---
 
-# TODO
-vaciar el lavavajillas
+# A continuación te mostramos todos los posts
+
 {{ page.tags}}
