--- a/_posts/2024-02-13-asir2.md
+++ b/_posts/2024-02-13-asir2.md
@@ -1,16 +1,34 @@
 ---
-title: "post antiguo"
+title: "New Realeses: Kanye West"
 layout: posts
 tags: oooooo
 categories: 
-    - clase
-    - kiko
+    - post
+    - Music
+    - HipHop
 ---
 
-nuevo post
+# La razón por la que podrían bajar ‘Vultures’ de Kanye West de plataformas digitales
 
-contando las andanzas de clase
+_Ni una semana nos duró 'Vultures' en plataformas digitales, pues planean bajar el nuevo disco de Kanye West de servicios de streaming. Acá les contamos cómo está la cosa._
 
-## todos van a aprobar.
+Estuvo un buen rato callado, pero Kanye West regresó y como ya es una costumbre, está dando de qué hablar por sus ya conocidas polémicas. Y en esta ocasión lo decimos porque el gusto de escuchar Vultures, su nuevo disco nos va a durar muy poco, pues estarían planeando todo para eliminarlo de los servicios de streaming… así como lo leen.
 
-**mentira segun alvaro**
+Como recordarán, fue el pasado 10 de febrero cuando después de varias semanas de espera y sin avisarle a nadie, Ye por fin soltó este material discográfico en colaboración con Ty Dolla $ign. Como suele pasar con cada lanzamiento de West, el internet se volvió loco escuchando sus nuevas rolas, las cuales tienen un montón de referencias bastante peculiares a nombres importantes de la música, el entretenimiento y hasta de la historia.
+
+## Parece que nos quedaríamos sin ‘Vultures’, el disco de Kanye West en servicios de streaming
+
+Sin embargo, aunque Vultures tuvo un buen recibimiento en general, parece que tendremos qué despedirnos de él por un rato pues, como si se tratara de una mala broma, planean bajar el nuevo disco de Kanye West de plataformas digitales. ¿La razón? Bueno, pues según la distribuidora del álbum en servicios de streaming, el rapero y diseñador les aplicó “la ñera” de soltarlo sin avisarle a nadie.
+
+Resulta que el día que este material discográfico llegó a plataformas como Apple Music, Amazon Music, TIDAL (y más tarde a Spotify), aparecía como distribuido por una empresa llamada FUGA. Todo iba de maravilla, los fans de Ye andaban contentos escuchando en lo que estuvo trabajando, pero con lo que no contaban es que ni West ni nadie tenía el permiso de la compañía para treparlo a ningún servicio.
+
+A través de un comunicado publicado por Billboard, un representante de FUGA declaró que en 2023 les ofrecieron la oportunidad de distribuir Vultures de Kanye West y Ty Dolla $ign en plataformas digitales. Sin embargo, considerando las polémicas en las que se ha metido Yeezy y, según la compañía, bajo su “criterio en el curso normal de los negocios” tomaron la decisión de no hacerlo.
+
+Pero contra todo pronóstico, un antiguo cliente de la empresa entregó el álbum a través de procesos automatizados en línea un día antes de que el mundo pudiera escucharlo, violando el acuerdo de servicio que tenían. Por lo tanto, FUGA estaba trabajando activamente con sus socios y clientes (refiriéndose a los servicios de streaming) para supuestamente eliminar el nuevo material discográfico de Ye.
+
+## Ye también hizo enojar a Ozzy Osbourne y hasta a los herederos de Donna Summer
+
+Hasta el momento no está claro si FUGA cumplirá su amenaza y bajará el disco de todos lados. Lo único que sí sabemos es que Kanye no puede estar un día sin meterse en una bronca o sin hacer algo que haga enojar a la industria musical.
+
+
+
