--- a/_posts/2021-12-25-post1.md
+++ b/_posts/2021-12-25-post1.md
@@ -16,7 +16,7 @@ _Para hablar de la música alternativa y de cómo en los últimos años tomó mu
 
 
 ## Young and Beautiful
-_Young and Beautiful_ fue escrita por Lana luego de que el director, co-guionista y co-productor de la película, Baz Luhrmann, la considerara para la banda sonora de The Great Gatsby. Del Rey escribió una versión anterior de la canción para su EP Paradise, pero la volvió a trabajar con Luhrmann después de que la escuchó y decidió que funcionaría muy bien con la película. En una entrevista Lana, comentó que le cantó la canción a Baz y que este le pidió que le escribiera un tema al personaje de Daisy, y que luego de ver la secuencia del jardín, la cantante ya había escrito la canción. Daisy es un personaje que representa todo el narcisismo en pleno, dado que la juventud y la belleza son sus motores de vida, pero eventualmente se cuestiona si habrá algún hombre que la quiera cuando ya no sea ni joven ni hermosa.
+_Young and Beautiful_ fue escrita por Lana luego de que el director, co-guionista y co-productor de la película, Baz Luhrmann, la considerara para la banda sonora de The Great Gatsby. Del Rey escribió una versión anterior de la canción para su EP Paradise, pero la volvió a trabajar con Luhrmann después de que la escuchó y decidió que funcionaría muy bien con la película. En una entrevista Lana, comentó que le cantó la canción a Baz y que este le pidió que le escribiera un tema al personaje de Daisy, y que luego de ver la secuencia del jardín, la cantante ya había escrito la canción. Daisy es un personaje que representa todo el narcisismo en pleno, dado que la juventud y la belleza son sus motores de vida, pero eventualmente se cuestiona si habrá algún hombre que la quiera cuando ya no sea ni joven ni hermosa. uu
 
 _I’ve seen the world, lit it up as my stage now / Channeling angels in the new age now / Will you still love me when I’m no longer young and beautiful? / Will you still love me when I got nothing but my aching soul?_
 
